--- a/contact.html
+++ b/contact.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Contact Us</h1>
+        <h1>Contact Us</h1>    <h1>Contact Us</h1>    <h1>Contact Us</h1>
 </body>
 </html>
